; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_bmp085.c_bmp085_setup.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_bmp085.c_bmp085_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8*, i8*, i8*, i8*, i8*, i8*, i8*, i8*, i8*, i8* }

@bmp085_i2c_id = common dso_local global i32 0, align 4
@bmp085_data = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @bmp085_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bmp085_setup(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @bmp085_i2c_id, align 4
  %5 = call i8* @r16(i32 %4, i32 170)
  store i8* %5, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 10), align 8
  %6 = load i32, i32* @bmp085_i2c_id, align 4
  %7 = call i8* @r16(i32 %6, i32 172)
  store i8* %7, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 9), align 8
  %8 = load i32, i32* @bmp085_i2c_id, align 4
  %9 = call i8* @r16(i32 %8, i32 174)
  store i8* %9, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 8), align 8
  %10 = load i32, i32* @bmp085_i2c_id, align 4
  %11 = call i8* @r16u(i32 %10, i32 176)
  store i8* %11, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 7), align 8
  %12 = load i32, i32* @bmp085_i2c_id, align 4
  %13 = call i8* @r16u(i32 %12, i32 178)
  store i8* %13, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 6), align 8
  %14 = load i32, i32* @bmp085_i2c_id, align 4
  %15 = call i8* @r16u(i32 %14, i32 180)
  store i8* %15, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 5), align 8
  %16 = load i32, i32* @bmp085_i2c_id, align 4
  %17 = call i8* @r16(i32 %16, i32 182)
  store i8* %17, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 4), align 8
  %18 = load i32, i32* @bmp085_i2c_id, align 4
  %19 = call i8* @r16(i32 %18, i32 184)
  store i8* %19, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 3), align 8
  %20 = load i32, i32* @bmp085_i2c_id, align 4
  %21 = call i8* @r16(i32 %20, i32 186)
  store i8* %21, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 2), align 8
  %22 = load i32, i32* @bmp085_i2c_id, align 4
  %23 = call i8* @r16(i32 %22, i32 188)
  store i8* %23, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 1), align 8
  %24 = load i32, i32* @bmp085_i2c_id, align 4
  %25 = call i8* @r16(i32 %24, i32 190)
  store i8* %25, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmp085_data, i32 0, i32 0), align 8
  ret i32 0
}

declare dso_local i8* @r16(i32, i32) #1

declare dso_local i8* @r16u(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
